--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--page by http://naturalnonsense.xyz /// @nat_nonsense-->
 <html><head>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -8,7 +9,15 @@
 <a href="https://youtube.com/c/qwertyfox"><img src="youtube.png" class="button1"></a>
 <a href="https://twitter.com/qwertfox"><img src="twitter.png" class="button2"></a>
 <a href="https://discord.gg/bRKDreeJXp"><img src="discord.png" class="button3"></a>
-<a href="https://twitter.com/qwertfox"><img src="comms.png" class="button4"></a>
+<a href="./comms.html"><img src="comms.png" class="button4"></a>
+<audio loop autoplay controls class="audio" id="bgm">
+			<source src="./bgm.mp3">
+			<p>Not found. </p>
+			</audio>
 </div>
 <img src="char.png" class="char">
+<script>
+  var audio = document.getElementById("bgm");
+  audio.volume = 0.3;
+</script>
 </body>
